<resources>
    <string name="app_name">Duolingo_cover</string>
    <string name="h_y_d_ch_n_ng">Hãy dịch \'\'nóng\'\'</string>
    <string name="todo">TODO</string>
    <string name="ki_m_tra">Kiểm tra</string>
    <string name="nh_p_v_o_b_ng_ti_ng_anh">Nhập vào bằng Tiếng Anh</string>
    <string name="ch_n_t_c_n_thi_u">Chọn từ còn thiếu</string>
    <string name="we_read_a_newspaper">We read _____ a newspaper</string>
    <string name="them">them</string>
    <string name="they">they</string>
    <string name="kmtraCheck">KIỂM TRA</string>
    <string name="b_t_u">BẮT ĐẦU</string>
    <string name="todo2">TODO</string>
    <string name="ch_o_m_ng_n_v_i_duolingo">Chào mừng đến với Duolingo</string>
    <string name="textview">TextView</string>
    <string name="let_s_begin">Let\'s Begin</string>
    <string name="coffee">Coffee</string>
    <string name="rice">Rice</string>
    <string name="food">Food</string>
    <string name="bread">Bread</string>
    <string name="u_l_th_c_n">Đâu là \"thức ăn\"</string>
    <string name="lives">Lives:</string>
</resources>